feat: Introduce RailRoad Car Class (WIP)

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
       <use xlink:href="#rail13" class="rail__track rail__track--13" filter="url(#double)"></use>
       <use xlink:href="#rail14" class="rail__track rail__track--14" filter="url(#double)"></use>
     </svg>
-    <div class="train__car js-train-1">🚂</div>
-    <div class="train__car js-train-2">🚂</div>
+    <div class="vehicle__locomotive js-train-1">🚂</div>
+    <div class="vehicle__locomotive js-car-1">🚃</div>
+
   </div>
 </main>
 </body>
