feat: Introduce RailRoad Car Class (very first incorrect implementation)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <use xlink:href="#rail14" class="rail__track rail__track--14" filter="url(#double)"></use>
     </svg>
     <div class="vehicle__locomotive js-train-1">🚂</div>
-    <div class="vehicle__locomotive js-car-1">🚃</div>
+    <div class="vehicle__railcar js-car-1">🚃🚃</div>
+    <div class="vehicle__railcar js-car-2">🚃🚃</div>
+    <div class="vehicle__railcar js-car-3">🚃🚃</div>
 
   </div>
 </main>
