--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="controls__switches">
     <button type="button" id="train-direction">Direction</button>
   </div>
+  <p>💁 Click the switcher to change the track direction.</p>
 </nav>
 <main>
   <div class="playground__container">
