deploy: aedee20f8a627f2f3547d22b4002efcc3e459f52

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="controls__switches">
     <button type="button" id="train-direction">Direction</button>
   </div>
+  <p>💁 Click the switcher to change the track direction.</p>
 </nav>
 <main>
   <div class="playground__container">
