--- a/index.html
+++ b/index.html
@@ -1,67 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Railroad demo</title>
   <script type="module" src="/src/scripts/index.ts"></script>
 </head>
+
 <body>
-<nav class="controls">
-  <label>Speed: <input type="range" id="train-speed" class="controls__speed" min="0" max="10" step="1" value="3"/></label>
-  <div class="controls__switches">
-    <button type="button" id="train-direction">Direction</button>
-  </div>
-  <p>💁 Click the switcher to change the track direction.</p>
-</nav>
-<main>
-  <div class="playground__container">
-    <svg preserveAspectRatio="xMidYMid meet" viewBox="0 0 800 840" width="800" height="840" class="playground__canvas">
-      <defs>
-        <filter id="double">
-          <feMorphology in="SourceGraphic" result="a" operator="dilate" radius="2"/>
-          <feComposite in="SourceGraphic" in2="a" result="xx" operator="xor"/>
-        </filter>
-        <path d="M100,400 v -100 q0,-100,100,-100q50 0,100 0" id="rail1"></path>
-        <path d="M300,200h100 q100,0,100,100v100" id="rail2"></path>
-        <path d="M500,400 q 0 100, -100 100 h -200" id="rail4"></path>
-        <path d="M200,500 q -100 0, -100 -100" id="rail6"></path>
-        <path d="M500,400v100q0,100,-100,100 h -100" id="rail7"></path>
-        <path d="M300 600 h -150 q -100 0,-100 -100" id="rail9"></path>
-        <path d="M50 500 c 0 -50, 50 -50, 50 -100" id="rail11"></path>
-        <path d="M300 600 q -100 0, -100 100 " id="rail12"></path>
-        <path d="M200 700 q 0 100, 100 100 h 200 q 100 0, 100,-100 v -300 v -200 q 0 -100, -100 -100"
-              id="rail13"></path>
-        <path d="M500 100 c -100 0, -100 100, -200 100" id="rail14"></path>
-      </defs>
-      <use xlink:href="#rail1" class="rail__backing"></use>
-      <use xlink:href="#rail2" class="rail__backing"></use>
-      <use xlink:href="#rail4" class="rail__backing"></use>
-      <use xlink:href="#rail6" class="rail__backing"></use>
-      <use xlink:href="#rail7" class="rail__backing"></use>
-      <use xlink:href="#rail9" class="rail__backing"></use>
-      <use xlink:href="#rail11" class="rail__backing"></use>
-      <use xlink:href="#rail12" class="rail__backing"></use>
-      <use xlink:href="#rail13" class="rail__backing"></use>
-      <use xlink:href="#rail14" class="rail__backing"></use>
+  <nav class="controls">
+    <label>Speed: <input type="range" id="train-speed" class="controls__speed" min="0" max="10" step="1"
+        value="2" /></label>
+    <div class="controls__switches">
+      <button type="button" id="train-direction">Direction</button>
+    </div>
+    <p>💁 Click the switcher to change the track direction.</p>
+  </nav>
+  <main>
+    <div class="playground__container">
+      <svg preserveAspectRatio="xMidYMid meet" viewBox="0 0 800 840" width="800" height="840"
+        class="playground__canvas">
+        <defs>
+          <filter id="double">
+            <feMorphology in="SourceGraphic" result="a" operator="dilate" radius="2" />
+            <feComposite in="SourceGraphic" in2="a" result="xx" operator="xor" />
+          </filter>
+          <path d="M100,400 v -100 q0,-100,100,-100q50 0,100 0" id="rail1"></path>
+          <path d="M300,200h100 q100,0,100,100v100" id="rail2"></path>
+          <path d="M500,400 q 0 100, -100 100 h -200" id="rail4"></path>
+          <path d="M200,500 q -100 0, -100 -100" id="rail6"></path>
+          <path d="M500,400v100q0,100,-100,100 h -100" id="rail7"></path>
+          <path d="M300 600 h -150 q -100 0,-100 -100" id="rail9"></path>
+          <path d="M50 500 c 0 -50, 50 -50, 50 -100" id="rail11"></path>
+          <path d="M300 600 q -100 0, -100 100 " id="rail12"></path>
+          <path d="M200 700 q 0 100, 100 100 h 200 q 100 0, 100,-100 v -300 v -200 q 0 -100, -100 -100" id="rail13">
+          </path>
+          <path d="M500 100 c -100 0, -100 100, -200 100" id="rail14"></path>
+        </defs>
+        <use xlink:href="#rail1" class="rail__backing"></use>
+        <use xlink:href="#rail2" class="rail__backing"></use>
+        <use xlink:href="#rail4" class="rail__backing"></use>
+        <use xlink:href="#rail6" class="rail__backing"></use>
+        <use xlink:href="#rail7" class="rail__backing"></use>
+        <use xlink:href="#rail9" class="rail__backing"></use>
+        <use xlink:href="#rail11" class="rail__backing"></use>
+        <use xlink:href="#rail12" class="rail__backing"></use>
+        <use xlink:href="#rail13" class="rail__backing"></use>
+        <use xlink:href="#rail14" class="rail__backing"></use>
 
-      <use xlink:href="#rail1" class="rail__track rail__track--1" filter="url(#double)"></use>
-      <use xlink:href="#rail2" class="rail__track rail__track--2" filter="url(#double)"></use>
-      <use xlink:href="#rail4" class="rail__track rail__track--4" filter="url(#double)"></use>
-      <use xlink:href="#rail6" class="rail__track rail__track--6" filter="url(#double)"></use>
-      <use xlink:href="#rail7" class="rail__track rail__track--7" filter="url(#double)"></use>
-      <use xlink:href="#rail9" class="rail__track rail__track--9" filter="url(#double)"></use>
-      <use xlink:href="#rail11" class="rail__track rail__track--11" filter="url(#double)"></use>
-      <use xlink:href="#rail12" class="rail__track rail__track--12" filter="url(#double)"></use>
-      <use xlink:href="#rail13" class="rail__track rail__track--13" filter="url(#double)"></use>
-      <use xlink:href="#rail14" class="rail__track rail__track--14" filter="url(#double)"></use>
-    </svg>
-    <div class="vehicle__locomotive js-train-1">🚂</div>
-    <div class="vehicle__railcar js-car-1">🚃🚃</div>
-    <div class="vehicle__railcar js-car-2">🚃🚃</div>
-    <div class="vehicle__railcar js-car-3">🚃🚃</div>
-
-  </div>
-</main>
+        <use xlink:href="#rail1" class="rail__track rail__track--1" filter="url(#double)"></use>
+        <use xlink:href="#rail2" class="rail__track rail__track--2" filter="url(#double)"></use>
+        <use xlink:href="#rail4" class="rail__track rail__track--4" filter="url(#double)"></use>
+        <use xlink:href="#rail6" class="rail__track rail__track--6" filter="url(#double)"></use>
+        <use xlink:href="#rail7" class="rail__track rail__track--7" filter="url(#double)"></use>
+        <use xlink:href="#rail9" class="rail__track rail__track--9" filter="url(#double)"></use>
+        <use xlink:href="#rail11" class="rail__track rail__track--11" filter="url(#double)"></use>
+        <use xlink:href="#rail12" class="rail__track rail__track--12" filter="url(#double)"></use>
+        <use xlink:href="#rail13" class="rail__track rail__track--13" filter="url(#double)"></use>
+        <use xlink:href="#rail14" class="rail__track rail__track--14" filter="url(#double)"></use>
+      </svg>
+      <div class="vehicle__locomotive js-train-1">🚂</div>
+      <div class="vehicle__railcar js-car-1">🚃🚃</div>
+      <div class="vehicle__railcar js-car-2">🚃🚃</div>
+      <div class="vehicle__railcar js-car-3">🚃🚃</div>
+      <div class="vehicle__railcar js-car-4">🚃🚃</div>
+      <div class="vehicle__railcar js-car-5">🚃🚃</div>
+      <div class="vehicle__railcar js-car-6">🚃🚃</div>
+    </div>
+  </main>
 </body>
-</html>
 
+</html>
