Add privacy-first analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       <div class="vehicle__railcar js-car-6">🚃🚃</div>
     </div>
   </main>
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+      referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
